update heartbeat api
