# src/api/handlers/ping.go
@@ -1,7 +1,20 @@
 package handlers
 
-import "github.com/gin-gonic/gin"
+import (
+	"backend-boilerplate/models"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
 
-func GetHeartbeat(c *gin.Context) {
-
+// GetHeartbeat godoc
+// @Summary		return a status
+// @Tags		heartbeat
+// @Success		200
+// @Router		/application/heartbeat [get]
+func GetHeartbeat(c *gin.Context) *gin.Error {
+	if err := models.PingDatabase(); err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": "error", "error_type": "database_error"})
+	}
+	c.JSON(http.StatusOK, gin.H{"status": "ok"})
+	return nil
 }
